fix: Prevent top bar from overlapping main content
Gemini commit: the top bar is overlapping the rest of the page - can you make the page start after the bottom of the top bar? also add a white line to the bottom of the top bar.

--- a/map-display.css
+++ b/map-display.css
@@ -2,6 +2,7 @@ html {
     background-color: black;
     font-family: Verdana;
     font-size: 11pt;
+    margin-top: 50px;
 }
 
 h1 {
@@ -14,7 +15,7 @@ h1 {
 #right-panel {
     position: fixed;
     right: 20px;
-    top: 20px;
+    top: 70px;
     width: 33%;
     background-color: #666;
     border: 1px solid white;
@@ -33,6 +34,7 @@ h1 {
     align-items: center;
     padding: 10px;
     z-index: 100;
+    border-bottom: 1px solid white;
 }
 
 #user-panel {
